[INTERNAL] m.ColumnListItem: popin alignment fix for the belize theme
 - The fix for the base theme was already performed with the
0575b6f4942d1bd3df2500bc3ac4f26ab8e212ac change.
 - For compatibility reasons this change is only for the belize theme.

SNOW: DINC0235441

--- a/src/themelib_sap_belize/src/sap/m/themes/sap_belize_base/Table.less
+++ b/src/themelib_sap_belize/src/sap/m/themes/sap_belize_base/Table.less
@@ -105,7 +105,7 @@ tr.sapMListTblHeaderNone > .sapMTableTH {
 
 .sapMListTblSubCntSpr,
 .sapMListTblSubCntVal {
-    display: inline;
+    display: inline-flex;
 }
 
 .sapMListTblSubCntValBlock {
